--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,12 @@
   <body>
     <h1>Todos</h1>
     <ul>
-      <% for(let i = 0; i < zebra.length; i++) {%>
+      <% for(let i = 0; i < info.length; i++) {%>
       <li class="todoItem">
-        <% if(zebra[i].completed === true){%>
-        <span class="completed"><%= zebra[i].todo %></span>
+        <% if(info[i].completed === true){%>
+        <span class="completed"><%= info[i].todo %></span>
         <% }else{ %>
-        <span><%= zebra[i].todo %></span>
+        <span><%= info[i].todo %></span>
         <% } %>
         <span class="del"> delete </span>
       </li>
