Minor color fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  background: #e0e0e0;
+  background: white;
   font-family: 'Roboto', sans-serif;
 	max-width: 120rem;
 	margin: 0 auto;
